# asynciocrawler

./: .gitignore  LICENSE  requirements.txt  setup.cfg
src/crawler/: .crawler.py.swp  crawler.py
tests/: test_crawler.py
