[metadata]
name = asyncio-web-crawler
version = 0.0.1
author = Lewis R
author_email = lewis.robbins2+git@gmail.com
description = An AsyncIO Web Crawler
long_description = file: README.md
long_description_content = text/markdown
url = github.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
  = src
packages = find:
python_requires = >= 3.7

[options.packages.find]
where = src
